--- a/images.yaml
+++ b/images.yaml
@@ -1,7 +1,1 @@
-mysql:8.0.32: registry.cn-hangzhou.aliyuncs.com/shilohl/mysql
-phpmyadmin:5.2.1: registry.cn-hangzhou.aliyuncs.com/shilohl/phpmyadmin
-alpine:3.18.2: registry.cn-hangzhou.aliyuncs.com/shilohl/mysql-job-dbdata
-redis:6.2: registry.cn-hangzhou.aliyuncs.com/shilohl/redis
-spryker/redis-commander:0.8.0: registry.cn-hangzhou.aliyuncs.com/shilohl/redis-admin
-portainer/portainer-ce:latest: registry.cn-hangzhou.aliyuncs.com/shilohl/portainer
-dreamacro/clash:latest: registry.cn-hangzhou.aliyuncs.com/shilohl/clash
+rocketmq:5.1.0: registry.cn-hangzhou.aliyuncs.com/shilohl/rocketmq
